--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
 
     <!-- Roboto font import -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+
+    <title>Weather</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
