--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <!-- Roboto font import -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
     <title>Weather</title>
   </head>
